# IDP-SPRINT-2026.1

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: CrudProjectsChangeLog.md  auth-user-crud.md
docs/changelogs/: CrudDictionaryChangelog.md
docs/rules/: CLAUDE_CODE_COMMANDS.md  CRUD_DECISIONS.md  ISSUE.md  PLANO_CRUD_CONSOLIDADO.md
src/application/auth/: dtos.py  login_user.py  logout_user.py  refresh_session.py  register_user.py  services.py
src/application/dictionary/: create_entry.py  dtos.py  get_entry.py  list_entries.py  update_entry.py
src/application/projects/: create_project.py  dtos.py
src/application/reports/: dtos.py  get_execution_status.py  get_report.py  process_report.py  reprocess_report.py  upload_report.py
src/application/users/: __init__.py  change_password.py  dtos.py  get_current_user.py
src/domain/auth/: entities.py  exceptions.py  repositories.py
src/domain/dictionary/: entities.py  repositories.py
src/domain/projects/: entities.py  exceptions.py  repositories.py
src/domain/reports/: entities.py  repositories.py
src/domain/users/: entities.py  exceptions.py  repositories.py
src/infrastructure/: settings.py
src/infrastructure/auth/: password_hasher.py  token_service.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/persistence/: __init__.py  database.py  in_memory_refresh_token_repository.py  (+1 more)
tests/: conftest.py
tests/integration/: test_auth_api.py  test_dictionary_api.py  test_projects_api.py  test_users_api.py
(+40 files in other folders)
