[project]
name = "normalizador-jusbrasil"
version = "0.1.0"
description = "API para normalizacao e classificacao de relatorios juridicos."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
